add a github actions deployment